# cura

./: .gitignore  CLAUDE.md  USAGE.md  product-north-star.md  project-plan.md  technical-plan.md
docs/: DESIGN.md  ai-playbook.md  authn-authz-technical-plan.md  crm-core-technical-plan.md  crm-technical-plan.md  outreaching-technical-plan.md  (+4 more)
python/apps/talon/: Dockerfile.dev  pyproject.toml  talon-project-management.md
python/apps/talon/src/talon/: agent.py  config.py  main.py  models.py
python/apps/talon/src/talon/adapters/browser/: browser_use_backend.py
python/apps/talon/src/talon/adapters/credentials/: secrets_manager_store.py
python/apps/talon/src/talon/adapters/session/: s3_session_store.py
python/apps/talon/src/talon/adapters/task_repository/: http_task_repository.py
python/apps/talon/src/talon/application/: executor.py
python/apps/talon/src/talon/browser/: backend.py  browser_use_backend.py
python/apps/talon/src/talon/credentials/: vault.py
python/apps/talon/src/talon/domain/: models.py
python/apps/talon/src/talon/domain/ports/: browser_backend.py  credential_store.py  session_store.py  task_repository.py
python/apps/talon/src/talon/session/: persistence.py
python/apps/talon/tests/: test_models.py
python/apps/talon/tests/adapters/: test_http_task_repository.py  test_s3_session_store.py  test_secrets_manager_store.py
python/apps/talon/tests/fakes/: fake_browser_backend.py  fake_credential_store.py  fake_session_store.py  fake_task_repository.py
python/apps/talon/tests/unit/: conftest.py  test_executor.py  test_models.py
(+322 files in other folders)
