[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "talon"
version = "0.1.0"
description = "Cura Talon — deterministic browser task executor"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk>=0.3.0",
    "browser-use>=0.2.0",
    "playwright>=1.44.0",
    "starlette>=0.40.0",
    "uvicorn[standard]>=0.30.0",
    "boto3>=1.34.0",
    "cryptography>=42.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-ulid>=2.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "boto3-stubs[s3,secretsmanager]>=1.34.0",
    "moto[s3,secretsmanager]>=5.0.0",
    "respx>=0.21.0",
]

[project.scripts]
talon = "talon.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/talon"]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
